--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oso",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anapau-u.github.io/react",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@headlessui/react": "^2.1.1",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "gh-pages": "^5.0.0"
   }
 }
